--- a/website/css/style-home.css
+++ b/website/css/style-home.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body{
+    width: 100%;
+}
+
 .container{
     width: 80%;
 }
@@ -140,10 +144,13 @@ section .container .image-main h2{
 
 .onda-one{
     position: relative;
-    width: 100%;
     height: 250px;
 
     margin-top: 45%;
+}
+
+.onda-one img{
+    width: 100%;
 }
 
 /*  
