Modificando a página inicial

--- a/website/css/style-nav-footer.css
+++ b/website/css/style-nav-footer.css
@@ -15,9 +15,12 @@
     ---| INÍCIO DA ESTILIZAÇÃO DA NAVBAR
 */
 nav{
+    position: fixed;
+    top: 0;
+    z-index: 3;
+
     width: 100%;
     height: 65px;
-    background-color: #0F0F0F;
 
     display: flex;
     justify-content: center;
