--- a/website/css/style-home.css
+++ b/website/css/style-home.css
@@ -26,10 +26,10 @@ body{
     height: 850px;
     background-image: url('../assets/img/fundo-deep-slake.png');
     background-repeat: no-repeat;
-
+    background-position-y: 0px 100px;
 }
 
-.nav{
+/* .nav{
     width: 100%;
     height: 100px;
 
@@ -94,7 +94,7 @@ body{
 .nav .container .links-fixed a:hover,
 .nav .container .links-fixed a:active{
     color: white;
-}
+} */
 
 /*  
     ---| FIM DA ESTILIZAÇÃO DA NAVBAR
@@ -113,8 +113,6 @@ section{
     justify-content: center;
     align-items: center;
     flex-direction: row;
-
-    position: absolute;
 }
 
 section .container{
@@ -136,7 +134,7 @@ section .container .image-main{
     align-items: center;
     flex-direction: column;
 
-    margin-bottom: 10vh;
+    margin-bottom: 20vh;
 }
 
 section .container .image-main h2{
@@ -150,10 +148,11 @@ section .container .image-main h2{
 }
 
 .onda-one{
-    position: relative;
+    position: absolute;
     height: 250px;
-
     margin-top: 40%;
+    bottom: 0;
+    top: 10%;
 }
 
 .onda-one img{
