--- a/website/css/style-about.css
+++ b/website/css/style-about.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@700&display=swap');
+
 
 *{
     margin: 0;
@@ -6,14 +8,6 @@
     box-sizing: border-box;
 }
 
-.container{
-    width: 80%;
-}
-
-
-/*  
-    ---| INÍCIO DA ESTILIZAÇÃO DA NAVBAR
-*/
 nav{
     position: fixed;
     top: 0;
@@ -94,112 +88,80 @@ nav .container .links a:active{
     color: white;
 }
 
-
-/*  
-    ---| FIM DA ESTILIZAÇÃO DA NAVBAR
-*/
-
-
-/*  
-    ---| INÍCIO DA ESTILIZAÇÃO DO FOOTER
-*/
-footer{
-    width: 100%;
-    height: 130px;
-    background-color: #0F0F0F;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    margin-top: 50px;
+.container{
+    width: 80%;
 }
 
-footer .container{
-    width: 90%;
+
+.banner-main{
+    width: 100%;
+    height: 300px;
+
+    margin-top: 60px;
+
+    background-image: url('../assets/img/fundo-sobre1.png');
+    background-repeat: no-repeat;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-bottom: 8px solid #428F4A;
+}
+
+.banner-main .container{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-main .container h1{
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    color: white;
+}
+
+/* 
+    FIM BANNER PRINCIPAL
+*/
+
+
+/* 
+    INÍCIO "SOBRE O CRIADOR E TEMA"
+*/
+
+.creator-theme{
+    width: 100%;
+    height: 850px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.creator-theme .container{
     height: 100%;
 
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-footer .container .logo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: center;
-}
-
-footer .container .logo img{
-    width: 35px;
-    height: 35px;
-}
-
-footer .container .logo p{
-    color: white;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 10px;
-    margin: 5px;
-}
-
-footer .container .links{
-    width: 40%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
 }
 
-footer .container .links a{
-    position: relative;
-    display: flex;  
-    align-items: center;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 13px;
-    font-weight: 600;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding: 0 5px;
-}
-
-footer .container .links a::after{
-    content: "";
-    position: absolute;
-    background-color: #428F4A;
-    height: 3px;
-    width: 0%;
-    left: 0;
-    bottom: -7px;
-    transition: 0.3s;
-}
-
-footer .container .links a:hover:after{
+.container .container-cards{
     width: 100%;
-}
+    height: 650px;
+    background-color: #428F4A;
 
-
-footer .container .social-links{
-    width: 20%;
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
 }
 
-footer .container .social-links a img{
-    width: 30px;
-    height: 30px;
+.container-cards .card{
+    height: 300px;
+    width: 100%;
+    background-color: aqua;
 }
-
-
-
-footer .container a:link,
-footer .container a:visited, 
-footer .container a:focus, 
-footer .container a:hover,
-footer .container a:active{
-    color: white;
-}
-
