--- a/website/css/style-home.css
+++ b/website/css/style-home.css
@@ -29,6 +29,85 @@ body{
     background-position-y: 0px 100px;
 }
 
+nav{
+    position: fixed;
+    top: 0;
+    z-index: 3;
+
+    width: 100%;
+    height: 65px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+nav .container{
+    height: 100%;
+    width: 90%;     
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .container .logo img{
+    width: 35px;
+    height: 35px;
+}
+
+nav .container .links{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#icon-navbar{
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    margin: 0;
+}
+
+nav .container .links a{
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    text-decoration: none;
+    letter-spacing: 1px;
+    padding: 0 5px;
+}
+
+nav .container .links a::after{
+    content: "";
+    position: absolute;
+    background-color: #428F4A;
+    height: 3px;
+    width: 0%;
+    left: 0;
+    bottom: -7px;
+    transition: 0.3s;
+}
+
+nav .container .links a:hover:after{
+    width: 100%;
+}
+
+
+nav .container .links a:link,
+nav .container .links a:visited, 
+nav .container .links a:focus, 
+nav .container .links a:hover,
+nav .container .links a:active{
+    color: white;
+}
+
 /* .nav{
     width: 100%;
     height: 100px;
@@ -758,6 +837,108 @@ section .container .image-main h2{
     font-size: 15px;
 }
 
+
+/* FOOTER */
+
+footer{
+    width: 100%;
+    height: 130px;
+    background-color: #0F0F0F;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 50px;
+}
+
+footer .container{
+    width: 90%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .container .logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .container .logo img{
+    width: 35px;
+    height: 35px;
+}
+
+footer .container .logo p{
+    color: white;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 10px;
+    margin: 5px;
+}
+
+footer .container .links{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer .container .links a{
+    position: relative;
+    display: flex;  
+    align-items: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 13px;
+    font-weight: 600;
+    text-decoration: none;
+    letter-spacing: 1px;
+    padding: 0 5px;
+}
+
+footer .container .links a::after{
+    content: "";
+    position: absolute;
+    background-color: #428F4A;
+    height: 3px;
+    width: 0%;
+    left: 0;
+    bottom: -7px;
+    transition: 0.3s;
+}
+
+footer .container .links a:hover:after{
+    width: 100%;
+}
+
+
+footer .container .social-links{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer .container .social-links a img{
+    width: 30px;
+    height: 30px;
+}
+
+
+
+footer .container a:link,
+footer .container a:visited, 
+footer .container a:focus, 
+footer .container a:hover,
+footer .container a:active{
+    color: white;
+}
 
 
 
