--- a/website/css/style-about.css
+++ b/website/css/style-about.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
 }
 
+
 nav{
     position: fixed;
     top: 0;
@@ -93,6 +94,10 @@ nav .container .links a:active{
 }
 
 
+/* 
+    ---| COMEÇO DA ESTILIZAÇÃO: BANNER PRINCIPAL
+*/
+
 .banner-main{
     width: 100%;
     height: 300px;
@@ -129,13 +134,11 @@ nav .container .links a:active{
 
 
 /* 
-    INÍCIO "SOBRE O CRIADOR E TEMA"
+    ---| COMEÇO DA ESTILIZAÇÃO: CRIADOR & TEMA
 */
-
 .creator-theme{
     width: 100%;
-    height: 850px;
-
+    height: 880px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,7 +146,6 @@ nav .container .links a:active{
 
 .creator-theme .container{
     height: 100%;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -151,17 +153,481 @@ nav .container .links a:active{
 
 .container .container-cards{
     width: 100%;
-    height: 650px;
+    height: 690px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* ---| CARD 1 */
+.container-cards .card{
+    height: 320px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.card .back-image{
+    width: 320px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .back-image img{
+    width: 300px;
+    height: 300px;
+}
+
+.card .text-box{
+    width: 70%; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card .text-box h1{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0F0F0F;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.card .text-box p{
+    width: 80%;
+    height: 50%;
+    display: flex;
+    color: #0F0F0F;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+
+/* ---| CARD 2 */
+.container-cards .card2{
+    height: 320px;
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.card2 .back-image{
+    width: 320px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card2 .back-image img{
+    width: 300px;
+    height: 300px;
+}
+
+.card2 .text-box{
+    width: 70%; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card2 .text-box h1{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0F0F0F;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.card2 .text-box p{
+    width: 80%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0F0F0F;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+/* 
+    ---| FIM DA ESTILIZAÇÃO: CRIADOR E TEMA
+*/
+
+
+/* 
+    ---| COMEÇO DA ESTILIZAÇÃO: VALORES PESSOAIS
+*/
+
+.personal-values{
+    width: 100%;
+    height: 400px;
     background-color: #428F4A;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.personal-values .container{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.personal-values .container .title{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title h1{
+    color: white;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.personal-values .container .values{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+
+.values .box{
+    width: 240px;
+    height: 240px;
+    background-color: #1E1E1E;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+
+    transition: 0.2s;
+}
+
+.values .box img{
+    width: 165px;
+    height: 165px;
+}
+
+.values .box h3{
+    color: white;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.values .box:hover{
+    background-color: #161616;
+    cursor: pointer;
+}
+
+/* 
+    ---| FIM DA ESTILIZAÇÃO: VALORES PESSOAIS
+*/
+
+
+/* 
+    ---| COMEÇO DA ESTILIZAÇÃO: PROBLEMA E SOLUÇÃO
+*/
+
+.onda-two{
+    height: 220px;
+}
+.onda-two img{
+    width: 100%;
+}
+
+.problem{
+    width: 100%;
+    height: 1300px;
+    margin-top: 5%;
+    background-image: url('../assets/img/fundo-problema.png');
+    background-repeat: no-repeat;
+}
+
+#problem{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#problem .container{
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 }
 
-.container-cards .card{
-    height: 300px;
+/* --- CARD 1 */
+.container .cards{
     width: 100%;
-    background-color: aqua;
+    height: 370px;
+    background-color: #1E1E1E;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    box-shadow: 0px 8px 10px #0f0f0fab;
+}
+
+.container .cards .back-image{
+    width: 320px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .cards .text-box{
+    width: 65%; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container .cards .text-box h1{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.container .cards .text-box p{
+    width: 90%; 
+    height: 50%;
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+/* --- CARD 2 */
+.container .cards2{
+    width: 100%;
+    height: 370px;
+    background-color: #1E1E1E;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+
+    box-shadow: 0px 8px 10px #0f0f0fab;
+}
+
+.container .cards2 .back-image{
+    width: 320px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .cards2 .text-box{
+    width: 65%; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container .cards2 .text-box h1{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.container .cards2 .text-box p{
+    width: 90%; 
+    height: 50%;
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+
+.container .button{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    justify-self: baseline;
+    align-self: start;
+}
+
+.container .button button{
+    width: 400px;
+    height: 60px;
+    background-color: #153C19;
+    border: none;
+    text-align: center;
+    color: white;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.container .button button:hover{
+    background-color: #1e5724;
+    transition: 0.2s;
+}
+
+
+
+/* FOOTER */
+
+footer{
+    width: 100%;
+    height: 130px;
+    background-color: #0F0F0F;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+footer .container{
+    width: 90%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .container .logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .container .logo img{
+    width: 35px;
+    height: 35px;
+}
+
+footer .container .logo p{
+    color: white;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 10px;
+    margin: 5px;
+}
+
+footer .container .links{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer .container .links a{
+    position: relative;
+    display: flex;  
+    align-items: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 13px;
+    font-weight: 600;
+    text-decoration: none;
+    letter-spacing: 1px;
+    padding: 0 5px;
+}
+
+footer .container .links a::after{
+    content: "";
+    position: absolute;
+    background-color: #428F4A;
+    height: 3px;
+    width: 0%;
+    left: 0;
+    bottom: -7px;
+    transition: 0.3s;
+}
+
+footer .container .links a:hover:after{
+    width: 100%;
+}
+
+
+footer .container .social-links{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer .container .social-links a img{
+    width: 30px;
+    height: 30px;
+}
+
+
+
+footer .container a:link,
+footer .container a:visited, 
+footer .container a:focus, 
+footer .container a:hover,
+footer .container a:active{
+    color: white;
 }
