--- a/website/css/style-home.css
+++ b/website/css/style-home.css
@@ -108,73 +108,6 @@ nav .container .links a:active{
     color: white;
 }
 
-/* .nav{
-    width: 100%;
-    height: 100px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-}
-
-.nav .container{
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-}
-
-.nav .container .links-fixed{
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.nav .container .links-fixed a img{
-    width: 25px;
-    height: 25px;
-}
-
-.nav .container .links-fixed a{
-    position: relative;
-    display: flex;
-    align-items: center;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 15px;
-    font-weight: 800;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding: 0 5px;
-}
-
-.nav .container .links-fixed a::after{
-    content: "";
-    position: absolute;
-    background-color: #428F4A;
-    height: 3px;
-    width: 0%;
-    left: 0;
-    bottom: -7px;
-    transition: 0.3s;
-}
-
-.nav .container .links-fixed a:hover:after{
-    width: 100%;
-}
-
-
-.nav .container .links-fixed a:link,
-.nav .container .links-fixed a:visited, 
-.nav .container .links-fixed a:focus, 
-.nav .container .links-fixed a:hover,
-.nav .container .links-fixed a:active{
-    color: white;
-} */
-
 /*  
     ---| FIM DA ESTILIZAÇÃO DA NAVBAR
 */
@@ -220,7 +153,7 @@ section .container .image-main h2{
     width: 80%;
     color: white;
     font-family: 'Noto Sans', sans-serif;
-        font-size: 40px;
+        font-size: 30px;
     font-weight: bold;
     letter-spacing: 1px;
     text-align: center;
@@ -417,9 +350,9 @@ section .container .image-main h2{
     width: 100%;
     height: 130px;
     background-color: #428F4A;
-
     display: flex;
     flex-direction: row;
+    cursor: pointer;
     transition: 0.5s;
 }
 
@@ -497,7 +430,7 @@ section .container .image-main h2{
     font-family: 'Noto Sans', sans-serif;
     font-size: 20px;
     font-weight: bold;
-
+    cursor: pointer;
     transition: 0.2s;
 }
 
@@ -638,6 +571,7 @@ section .container .image-main h2{
     font-family: 'Noto Sans', sans-serif;
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
 
     transition: 0.2s;
 }
