--- a/website/css/style-home.css
+++ b/website/css/style-home.css
@@ -146,7 +146,7 @@ section .container .image-main{
     align-items: center;
     flex-direction: column;
 
-    margin-bottom: 20vh;
+    margin-bottom: 15vh;
 }
 
 section .container .image-main h2{
@@ -162,7 +162,7 @@ section .container .image-main h2{
 .onda-one{
     position: absolute;
     height: 250px;
-    margin-top: 40%;
+    margin-top: 35%;
     bottom: 0;
     top: 15%;
 }
@@ -183,17 +183,16 @@ section .container .image-main h2{
 .how-work{
     position: relative;
     width: 100%;
-    height: 100vh;  
-    margin-top: 5%;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
+    margin-top: 5%;
 }
 
 .how-work .container{
-    height: 100%;
+    height: 70%;
 }
 
 .how-work .container .title{
@@ -289,7 +288,7 @@ section .container .image-main h2{
     justify-content: center;
     align-items: center;
 
-    margin-top: 10vh;
+    margin-top: 5%;
 
 }
 
@@ -712,7 +711,7 @@ section .container .image-main h2{
     font-weight: bold;
 
     align-self: baseline;
-    margin-left: 16px;
+    margin-left: 4%;
 }
 
 .form .form-box .input-text{
@@ -746,7 +745,7 @@ section .container .image-main h2{
     font-weight: bold;
 
     align-self: baseline;
-    margin-left: 16px;
+    margin-left: 4%;
 }
 
 
