--- a/site/public/css/style-page-user.css
+++ b/site/public/css/style-page-user.css
@@ -411,7 +411,7 @@ nav .container .links a:active{
 
 .content .text{
     width: 100%;
-    height: 80%;
+    height: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -429,8 +429,10 @@ nav .container .links a:active{
 .content .text .title h3{
     color: #ffffff;
     font-family: 'Noto Sans Bengali', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
+    width: 95%;
+    text-align: center;
 }
 
 .content .text .desc{
@@ -447,18 +449,19 @@ nav .container .links a:active{
     color: #ffffff;
     font-family: 'Noto Sans', sans-serif;
     font-size: 15px;
+    margin-top: 2px;
 }
 
 .content .like{
     width: 100%;
-    height: 20%;
+    height: 15%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 }
 
 .content .like .count-like{
-    width: 30%;
+    width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -469,7 +472,7 @@ nav .container .links a:active{
     text-align: center;
     color: #ffffff;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .content .like .button-like{
@@ -481,8 +484,8 @@ nav .container .links a:active{
 }
 
 .content .like .button-like img{
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
 }
 
 .container .button-random{
