--- a/site/public/css/style-home.css
+++ b/site/public/css/style-home.css
@@ -646,7 +646,7 @@ section .container .image-main h2{
 
 .container-main .form .text-box{
     width: 100%;
-    height: 30%;
+    height: 100%;
 
     display: flex;
     align-items: center;
@@ -656,15 +656,18 @@ section .container .image-main h2{
 
 .container-main .form .text-box h2{
     text-align: center;
+    height: 15%;
+    width: 100%;
     color: #0F0F0F;
     font-family: 'Noto Sans Bengali', sans-serif;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: bold;
 }
 
 .container-main .form .text-box p{
-    width: 70%;
-    text-align: center;
+    width: 90%;
+    height: 70%;
+    text-align: justify;
     color: #0F0F0F;
     font-family: 'Noto Sans', sans-serif;
     font-size: 18px;
