--- a/site/public/css/style-page-user.css
+++ b/site/public/css/style-page-user.css
@@ -245,6 +245,7 @@ nav .container .links a:active{
     width: 100%;
     height: 15%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -255,7 +256,20 @@ nav .container .links a:active{
     font-size: 40px;
     font-weight: bold;
     letter-spacing: 1px;
+    margin: 0;
+    height: 75%;
+
 }
+
+.content .title h3{
+    color: #1E1E1E;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin: 0;
+    height: 60%;
+}   
 
 .content .cards{
     width: 100%;
