--- a/site/public/css/style-home.css
+++ b/site/public/css/style-home.css
@@ -125,6 +125,7 @@ section{
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    border-bottom: 8px #428F4A solid;
 }
 
 section .container{
